<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <!-- TextView taking 70% of the width -->
        <TextView
            android:id="@+id/groupNameHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <!-- TextView taking 70% of the width -->
        <TextView
            android:id="@+id/headerMember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/members"
            android:textSize="24sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/baseline_person_add_alt_1_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:maxImageSize="40dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_user"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/baseline_map_24"
                app:layout_constraintBottom_toTopOf="@id/floatingAddUser"
                app:layout_constraintEnd_toEndOf="@id/floatingAddUser"
                app:maxImageSize="40dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/map_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
