<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <!-- Map Fragment -->
    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Overlay with Input Boxes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_gravity="top"
        android:background="@drawable/rounded_edittext_background"
        android:elevation="4dp"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_edittext_background">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_location_pin_24"
                android:contentDescription="@string/destination_location" />

            <EditText
                android:id="@+id/destination_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/destination_location"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="8dp"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center">

                <!-- Button for Clickable Area -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circular_button"
                    android:contentDescription="@string/user_profile_button"
                    android:padding="0dp" />

                <!-- ImageView for the Icon -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_user_24"
                    android:contentDescription="@string/user_profile_icon" />
            </FrameLayout>
        </LinearLayout>


        <!--        <Button-->
<!--            android:id="@+id/btn_find_route"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/find_route_button"-->
<!--            android:backgroundTint="#224661"-->
<!--            android:textColor="@color/white"-->
<!--            android:padding="8dp"-->
<!--            android:elevation="4dp"/>-->
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/map"
        app:layout_anchorGravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingMyLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/baseline_my_location_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingNavigationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/map_button"
            app:layout_constraintBottom_toTopOf="@id/floatingMyLocationButton"
            app:layout_constraintEnd_toEndOf="@id/floatingMyLocationButton"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/nav_notification_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>