<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <!-- Map Fragment -->
    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Overlay with Input Boxes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_gravity="top"
        android:background="@drawable/rounded_edittext_background"
        android:elevation="4dp"
        android:layout_margin="16dp">

        <!-- Input Box for Starting Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_edittext_background">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location_your"
                android:contentDescription="@string/your_location" />
            <EditText
                android:id="@+id/start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_location"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="8dp"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_marginVertical="1dp" />

        <!-- Input Box for Destination -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_edittext_background">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location_destination"
                android:contentDescription="@string/destination_location" />

            <EditText
                android:id="@+id/destination_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_location"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="8dp"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_find_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find_route_button"
            android:backgroundTint="#224661"
            android:textColor="@color/white"
            android:padding="8dp"
            android:elevation="4dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Button to start navigation -->
        <Button
            android:id="@+id/btn_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/start_navigation_button" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>